<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="4dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/app_name"
        android:textColor="@color/white"
        style="@style/ActivityNameTextStyle"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:orientation="vertical">

        <com.google.android.material.button.MaterialButton style="@style/MainActivityButtonStyle"
            android:id="@+id/buttonSearch"
            android:layout_weight="1"
            app:icon="@drawable/search_icon"
            android:text="@string/search_text" />

        <com.google.android.material.button.MaterialButton style="@style/MainActivityButtonStyle"
            android:id="@+id/buttonMedia"
            android:layout_weight="1"
            app:icon="@drawable/media_icon"
            android:text="@string/media_text"/>

        <com.google.android.material.button.MaterialButton style="@style/MainActivityButtonStyle"
            android:id="@+id/buttonSettings"
            android:layout_weight="1"
            app:icon="@drawable/settings_icon"
            android:text="@string/settings_text"/>
    </LinearLayout>
</LinearLayout>